<resources>
    <string name="app_name">Pizzeria Milenio</string>
    <string name="intent1_name">Registrar Usuario</string>
    <string name="intent2_name">PIZZERIA MILENIO</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password2">Repite la contraseña</string>
    <string name="prompt_usuario">Nombre de Usuario</string>
    <string name="prompt_fecNac">Fecha de Nacimiento</string>
    <string name="prompt_sexo">Género</string>
    <string name="prompt_tema">Tema Principal</string>
    <string name="prompt_mensaje">Inserte su mensaje...</string>
    <string name="prompt_NumComen">Número de comensales</string>
    <string name="prompt_HoraReserv">Hora de la reserva</string>
    <string name="prompt_FechaReserv">Fecha de la reserva</string>
    <string name="prompt_nombre">Nombre de la Reserva</string>
    <string name="prompt_numTfono">Número de contacto</string>
    <string name="prompt_prefNombre">"Preferencias de Nombre</string>
    <string name="prompt_preftelefono">"Almacenar Num de Telefono</string>
    <string name="prompt_prefComida">"Almacenar Hora de Comida</string>
    <string-array name="opciones">
        <item>Género</item>
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string name="action_entrar">Entrar</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_enviarDatos">Enviar Datos</string>
    <string name="action_guardarDatos">Guardar Datos</string>
    <string name="action_cerrarSesion">Cerrar Sesión</string>
    <string name="action_borrarDatos">Borrar Datos</string>
    <string name="action_enviarForo">Enviar Mensaje</string>
    <string name="action_leerForo">Leer Mensajes</string>
    <string name="action_enviarReserva">Realizar Reserva</string>
    <string name="action_modificarReserva">Modificar Reserva</string>
    <string name="action_misReserva">Mis Reservas</string>
    <string name="action_actualizarMensajes">Actualizar Lista Mensajes</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_comida">MENÚ</string>
    <string name="action_ofertas">Ofertas</string>
    <string name="action_localizacion">Localización</string>
    <string name="action_reserva">Reservar</string>
    <string name="action_foro">Foro</string>
    <string name="action_fecha1">Otro día</string>

    <string name="error_invalid_email">Email incorrecto</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="pizza_anchoas">Anchoas</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="pizza_bacon">Bacon</string>
    <string name="pizza_carbonara">Carbonara</string>
    <string name="pizza_carne">Carne</string>
    <string name="pizza_cuatroQuesos">4 Quesos</string>
    <string name="pizza_embutidos">Embutidos</string>
    <string name="pizza_frankfurt">Frankfurt</string>
    <string name="pizza_iberica">Ibérica</string>
    <string name="pizza_margarita">Margarita</string>
    <string name="pizza_marinera">Marinera</string>
    <string name="pizza_salami">Salami</string>
    <string name="pizza_milenio">Milenio</string>
    <string name="pizza_tropical">Tropical</string>
    <string name="pizza_vegetal">Vegetal</string>
    <string name="pizza_york">York</string>


    <string name="title_activity_menu2">Menu2</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_eliminarR">Anular Reserva</string>
    <string name="action_modificarR">Modificar Reserva</string>
    <string name="action_menu">Volver Menú Principal</string>
</resources>
