<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfcf3030">

    <LinearLayout
        android:id="@+id/email_Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:hint="@string/prompt_usuario"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:inputType="text"
            android:layout_height="55dp" />



        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordR2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password2"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/fecNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_fecNac"
            android:imeOptions="actionUnspecified"
            android:maxLength="10"
            android:maxLines="1"
            android:inputType="date"
            android:paddingBottom="20dp" />

        <Spinner
            android:id="@+id/sexo"
            android:layout_width="match_parent"
            android:hint="@string/prompt_sexo"
            android:entries="@array/opciones"
            android:paddingBottom="20dp"
            android:layout_height="50dp" />


        <Button
            android:id="@+id/buttonEnviarDatos"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_enviarDatos"
            android:textColor="#fbff00"
            android:backgroundTint="@color/colorButton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBorrarDatos"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_borrarDatos"
            android:textColor="#fbff00"
            android:backgroundTint="@color/colorButton"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
