<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#cfcf3030">
    <LinearLayout
        android:id="@+id/Tema_Reserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp">

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_nombre"
                android:padding="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp">

        <EditText
            android:id="@+id/editTextNumTfono"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:hint="@string/prompt_numTfono"
            android:padding="10dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/edit_text_style"
            android:inputType="number"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp">

            <EditText
                android:id="@+id/editTextNumComensales"
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_NumComen"
                android:padding="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:weightSum="1">

            <EditText
            android:id="@+id/editTextFecha"
            android:layout_width= "match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:hint="@string/prompt_FechaReserv"
            android:padding="10dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/edit_text_style"
            android:inputType="none"
                android:focusable="false"
            android:singleLine="true"
                android:onClick="onClick"
                android:editable="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp">

            <EditText
                android:id="@+id/editTextHoraReserva"
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_HoraReserv"
                android:padding="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edit_text_style"
                android:singleLine="true"
                android:inputType="none"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonEnviarReserva"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_enviarReserva"
            android:textColor="#ffffff"
            android:backgroundTint="@color/colorButton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMisReservas"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_misReserva"
            android:textColor="#ffffff"
            android:backgroundTint="@color/colorButton"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
