<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cfcf3030">

    <LinearLayout
        android:id="@+id/ScrollHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/buttonComida"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/action_comida"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:background="@drawable/menu"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:elevation="1dp"
        android:fontFamily="serif"
        tools:textStyle="normal|bold"
        android:autoText="false"
        android:paddingTop="60dp" />

    <Button
        android:id="@+id/buttonReserva"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/action_reserva"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:background="@drawable/reservado"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:elevation="1dp"
        android:fontFamily="serif"
        tools:textStyle="normal|bold"
        android:autoText="false"
        android:paddingTop="60dp"/>

    <Button
        android:id="@+id/buttonOfertas"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/action_ofertas"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:background="@drawable/ofertas"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:elevation="1dp"
        android:fontFamily="serif"
        tools:textStyle="normal|bold"
        android:autoText="false"
        android:paddingTop="60dp" />

    <Button
        android:id="@+id/buttonLocalizacion"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/action_localizacion"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:background="@drawable/localizacion"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:elevation="1dp"
        android:fontFamily="serif"
        tools:textStyle="normal|bold"
        android:autoText="false"
        android:paddingTop="60dp" />
    <Button
        android:id="@+id/buttonForo"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/action_foro"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:background="@drawable/foro"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:elevation="1dp"
        android:fontFamily="serif"
        tools:textStyle="normal|bold"
        android:autoText="false"
        android:paddingTop="60dp" />

    </LinearLayout>
</ScrollView>
