<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DB6AC">

    <LinearLayout
        android:id="@+id/ajustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp">

            <EditText
                android:id="@+id/preferenciaNombre"
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_prefNombre"
                android:padding="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp">

            <EditText
                android:id="@+id/prefTelefonk"
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_preftelefono"
                android:padding="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp">

            <EditText
                android:id="@+id/prefComida"
                android:layout_width= "match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_prefComida"
                android:padding="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edit_text_style"
                android:inputType="text"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonGuardarDatos"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_guardarDatos"
            android:textColor="@color/icons"
            android:backgroundTint="@color/colorButton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCerrarSesion"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_cerrarSesion"
            android:textColor="@color/icons"
            android:backgroundTint="@color/colorButton"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
